<resources>
    <string name="app_name">Tweeter</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_message">Don\'t have an account?</string>
    <string name="sign_up_message">Sign Up</string>
    <string name="login_btn">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_feed">Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_twitter_feed">TwitterFeed</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
