<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/loginFragmentContainer">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/light4"
            android:id="@+id/logoView"
            android:background="@android:color/holo_blue_dark" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="center"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmail" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/logoView" app:layout_constraintStart_toStartOf="@+id/logoView"
            app:layout_constraintEnd_toEndOf="@+id/logoView" android:hint="@string/login_email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPasswordField"
            app:layout_constraintEnd_toEndOf="@+id/loginEmail" app:layout_constraintStart_toStartOf="@+id/loginEmail"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/loginEmail"
            android:hint="@string/login_password"/>
    <TextView
            android:text="@string/login_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageView"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordField" android:textSize="14sp"
            android:textAlignment="viewStart" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"/>
    <TextView
            android:text="@string/sign_up_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupView" app:layout_constraintStart_toEndOf="@+id/messageView"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/loginPasswordField"
            android:textColor="@android:color/holo_blue_bright" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/messageView"/>
    <Button
            android:text="@string/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordField" app:layout_constraintStart_toStartOf="@+id/loginPasswordField"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordField"/>


</android.support.constraint.ConstraintLayout>