<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="109dp"
            android:layout_height="89dp" app:srcCompat="@drawable/profiledefault"
            android:id="@+id/profilePic" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signupFirstName" android:hint="@string/first_name" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/profilePic" app:layout_constraintEnd_toEndOf="@+id/profilePic"
            app:layout_constraintStart_toStartOf="@+id/profilePic"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signupLastname" android:hint="@string/last_name" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/signupFirstName"
            app:layout_constraintStart_toStartOf="@+id/signupFirstName"
            app:layout_constraintEnd_toEndOf="@+id/signupFirstName"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signupEmail"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/signupUsername"
            app:layout_constraintStart_toStartOf="@+id/signupUsername"
            app:layout_constraintEnd_toEndOf="@+id/signupUsername"
            android:hint="@string/email" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signupPassword" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/signupEmail"
            app:layout_constraintStart_toStartOf="@+id/signupEmail"
            app:layout_constraintEnd_toEndOf="@+id/signupEmail" android:hint="@string/password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signupUsername" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/signupLastname"
            app:layout_constraintStart_toStartOf="@+id/signupLastname"
            app:layout_constraintEnd_toEndOf="@+id/signupLastname" android:hint="@string/username"/>
    <Button
            android:text="@string/sign_up_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signupBtn" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/signupPassword"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="1.0" android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupSpinner"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.391"/>
</android.support.constraint.ConstraintLayout>